<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ScheduleWeekly"
    tools:context=".ScheduleMonthly">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/Weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monthly"
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/Daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daily "
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/PreviousWeekAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Left"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/white"
            />

        <TextView
            android:id="@+id/WeekDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weekly"
            android:textSize="20dp"
            android:textAlignment="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Right"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/white"
            android:id="@+id/NextWeekAction"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/WeekDay">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SUN"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="MON"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TUE"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="WED"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="THU"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="FRI"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAT"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/AddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Event"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/ClearEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear Last Event"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/eventList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
            />
    </LinearLayout>

</LinearLayout>