<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logo">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gym_buddy_match_black_sixteen"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:id="@+id/navigation_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/navigation_home"
            android:contentDescription="Home"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#3A3A3A"
            app:icon="@drawable/home" />

        <Button
            android:id="@+id/navigation_friends"
            android:contentDescription="Friends"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_home"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/friends" />

        <Button
            android:id="@+id/navigation_schedule"
            android:contentDescription="Schedule"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_friends"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/baseline_calendar_month_24" />

        <Button
            android:id="@+id/navigation_gyms"
            android:contentDescription="Gyms"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_schedule"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/gym"
            />
        <Button
            android:id="@+id/navigation_profile"
            android:contentDescription="Profile"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_gyms"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/user"
            />


    </RelativeLayout>

    <Button
        android:id="@+id/LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log Out"
        android:backgroundTint="#FF3A3A3A"/>

</RelativeLayout>